data/derived/comb/progs/unify/prog5574.ml.out
Characters 49-61:
  let fixpoint (f,b) = wwhile ( (let f2 x = f x in (f x, 3 < 4)), b);;
                                                   ^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
